--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "browser-sync start --server --files 'index.html'"
+    "serve": "browser-sync start --server --files '[index.html, list.html, created.html,selected.html,style.html,items.html]'"
   },
   "repository": {
     "type": "git",
